[package]
name = "intcode-debugger"
version = "0.1.0"
authors = ["Jak Barnes <jakbarnes69@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.25", default-features = true }
image = "0.22"
imgui = { version = "0.3.0-pre", path = "./src/imgui-rs" }
imgui-glium-renderer = { version = "0.3.0-pre", path = "./src/imgui-rs/imgui-glium-renderer" }
imgui-winit-support = { version = "0.3.0-pre", path = "./src/imgui-rs/imgui-winit-support" }
