[package]
name = "intcode-vm"
version = "0.1.0"
authors = ["Jak Barnes <jakbarnes69@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
log = { version = "0.4.8" }
env_logger = "0.7.1"
digiter = { path = "../digiter" }